[metadata]
name = lektor-markdown-from-file
version = 0.1
# description = [Add your description here]
# url = [link to your repository]
author = Eli Ribble
author_email = eli@theribbles.org
license = MIT
keywords = Lektor plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Lektor
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License

[options]
py_modules = lektor_markdown_from_file

[options.entry_points]
lektor.plugins =
    markdown-from-file = lektor_markdown_from_file:MarkdownFromFilePlugin
